@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2014 - 2023 LoboEvolution
+ * Copyright (c) 2014 - 2025 LoboEvolution
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -25,13 +25,14 @@
  */
 package org.loboevolution.gui;
 
+import lombok.extern.slf4j.Slf4j;
 import org.loboevolution.common.Strings;
 import org.loboevolution.common.Urls;
 import org.loboevolution.component.IBrowserPanel;
 import org.loboevolution.component.IDownload;
 import org.loboevolution.html.dom.HTMLElement;
+import org.loboevolution.html.dom.domimpl.HTMLAnchorElementImpl;
 import org.loboevolution.html.dom.domimpl.HTMLImageElementImpl;
-import org.loboevolution.html.dom.domimpl.HTMLLinkElementImpl;
 import org.loboevolution.laf.IconFactory;
 
 import javax.swing.*;
@@ -40,19 +41,15 @@ import java.awt.datatransfer.Clipboard;
 import java.awt.datatransfer.StringSelection;
 import java.io.ByteArrayInputStream;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.util.Base64;
-import java.util.logging.Logger;
 
 /**
  * The Class HtmlContextMenu.
- *
- *
- *
  */
+@Slf4j
 public class HtmlContextMenu {
-
-	private static final Logger logger = Logger.getLogger(HtmlContextMenu.class.getName());
 
 	/** The element. */
 	private final HTMLElement element;
@@ -86,7 +83,7 @@ public class HtmlContextMenu {
 	 * @param context
 	 *            the context
 	 */
-	public HtmlContextMenu(HTMLElement element, HtmlRendererContext context) {
+	public HtmlContextMenu(final HTMLElement element, final HtmlRendererContext context) {
 		this.element = element;
 		this.context = context;
 	}
@@ -97,42 +94,42 @@ public class HtmlContextMenu {
 	 * @return the j popup menu
 	 * @param bpanel a {@link org.loboevolution.component.IBrowserPanel} object.
 	 */
-	public JPopupMenu popupMenuImage(IBrowserPanel bpanel) {
+	public JPopupMenu popupMenuImage(final IBrowserPanel bpanel) {
 
-		JPopupMenu popupMenu = new JPopupMenu();
+		final JPopupMenu popupMenu = new JPopupMenu();
 		final HTMLImageElementImpl img = (HTMLImageElementImpl) element;
 		final String href = img.getSrc();
-		JMenuItem menuItem = new JMenuItem("View image");
+		final JMenuItem menuItem = new JMenuItem("View image");
 		menuItem.setIcon(IconFactory.getInstance().getIcon(SEARCH));
 		menuItem.addActionListener(e -> {
 			if (href.contains(";base64,")) {
 				final String base64 = href.split(";base64,")[1];
-				byte[] decodedBytes = Base64.getDecoder().decode(Strings.linearize(base64));
-				try (InputStream stream = new ByteArrayInputStream(decodedBytes)) {
+				final byte[] decodedBytes = Base64.getDecoder().decode(Strings.linearize(base64));
+				try (final InputStream stream = new ByteArrayInputStream(decodedBytes)) {
 					context.openImageViewer(href, stream);
-				} catch (Exception e1) {
-					e1.printStackTrace();
+				} catch (final Exception e1) {
+					log.error(e1.getMessage(), e1);
 				}
 			} else {
 				try {
 					context.openImageViewer(img.getFullURL(href));
-				} catch (Exception e1) {
-					e1.printStackTrace();
+				} catch (final Exception e1) {
+					log.error(e1.getMessage(), e1);
 				}
 			}
 		});
 		popupMenu.add(menuItem);
 
-		JMenuItem copyImageURL = new JMenuItem("Copy Image URL");
+		final JMenuItem copyImageURL = new JMenuItem("Copy Image URL");
 		copyImageURL.setIcon(IconFactory.getInstance().getIcon(COPY));
 		copyImageURL.addActionListener(e -> {
-			Clipboard clipboard = Toolkit.getDefaultToolkit().getSystemClipboard();
+			final Clipboard clipboard = Toolkit.getDefaultToolkit().getSystemClipboard();
 			String clip = "";
 			if (!href.contains(";base64,")) {
 				try {
 					clip = img.getFullURL(href).toExternalForm();
-				} catch (Exception e1) {
-					e1.printStackTrace();
+				} catch (final Exception e1) {
+					log.error(e1.getMessage(), e1);
 				}
 			} else {
 				clip = href;
@@ -141,21 +138,24 @@ public class HtmlContextMenu {
 		});
 		popupMenu.add(copyImageURL);
 
-		JMenuItem saveImage = new JMenuItem("Save Image");
+		final JMenuItem saveImage = new JMenuItem("Save Image");
 		saveImage.setIcon(IconFactory.getInstance().getIcon(SAVE));
 		saveImage.addActionListener(e -> {
 			try {
-				IDownload d = bpanel.getBrowserFrame().getDownload();
+				final IDownload d = bpanel.getBrowserFrame().getDownload();
 				if (!href.contains(";base64,")) {
-					URL scriptURL = Urls.createURL(new URL(img.getBaseURI()), href);
-					d.downloadFile(scriptURL);
+					URI uri = Urls.createURI(img.getBaseURI(), href);
+					if (uri != null) {
+						d.downloadFile(uri.toURL());
+					}
+
 				} else {
 					final String base64 = href.split(";base64,")[1];
-					byte[] decodedBytes = Base64.getDecoder().decode(Strings.linearize(base64));
+					final byte[] decodedBytes = Base64.getDecoder().decode(Strings.linearize(base64));
 					d.downloadFile(new ByteArrayInputStream(decodedBytes));
 				}
-			} catch (Exception e1) {
-				e1.printStackTrace();
+			} catch (final Exception e1) {
+				log.error(e1.getMessage(), e1);
 			}
 		});
 		popupMenu.add(saveImage);
@@ -168,35 +168,35 @@ public class HtmlContextMenu {
 	 * @return the j popup menu
 	 * @param bpanel a {@link org.loboevolution.component.IBrowserPanel} object.
 	 */
-	public JPopupMenu popupMenuLink(IBrowserPanel bpanel) {
-		JPopupMenu popupMenu = new JPopupMenu();
-		HTMLLinkElementImpl link = (HTMLLinkElementImpl) element;
-		JMenuItem menuItem = new JMenuItem("Open link in new tab");
+	public JPopupMenu popupMenuLink(final IBrowserPanel bpanel) {
+		final JPopupMenu popupMenu = new JPopupMenu();
+		final HTMLAnchorElementImpl link = (HTMLAnchorElementImpl) element;
+		final JMenuItem menuItem = new JMenuItem("Open link in new tab");
 		menuItem.setIcon(IconFactory.getInstance().getIcon(SEARCH));
 		menuItem.addActionListener(e -> {
 			try {
-				final URL url = new URL(link.getAbsoluteHref());
+				final URL url = new URI(link.getAbsoluteHref()).toURL();
 				context.linkClicked(url, true);
-			} catch (Exception e0) {
-				logger.severe(e0.getMessage());
+			} catch (final Exception e0) {
+				log.error(e0.getMessage(), e0);
 			}
 		});
 		popupMenu.add(menuItem);
-		JMenuItem copyLinkURL = new JMenuItem("Copy link URL");
+		final JMenuItem copyLinkURL = new JMenuItem("Copy link URL");
 		copyLinkURL.setIcon(IconFactory.getInstance().getIcon(COPY));
 		copyLinkURL.addActionListener(e -> {
-			Clipboard clipboard = Toolkit.getDefaultToolkit().getSystemClipboard();
+			final Clipboard clipboard = Toolkit.getDefaultToolkit().getSystemClipboard();
 			clipboard.setContents(new StringSelection(link.getAbsoluteHref()), null);
 		});
 		popupMenu.add(copyLinkURL);
-		JMenuItem saveImage = new JMenuItem("Save destination");
+		final JMenuItem saveImage = new JMenuItem("Save destination");
 		saveImage.setIcon(IconFactory.getInstance().getIcon(SAVE));
 		saveImage.addActionListener(e -> {
 			try {
-				IDownload d = bpanel.getBrowserFrame().getDownload();
-				d.downloadFile(new URL(link.getAbsoluteHref()));
-			} catch (Exception e1) {
-				e1.printStackTrace();
+				final IDownload d = bpanel.getBrowserFrame().getDownload();
+				d.downloadFile(new URI(link.getAbsoluteHref()).toURL());
+			} catch (final Exception e1) {
+				log.error(e1.getMessage(), e1);
 			}
 		});
 		popupMenu.add(saveImage);
@@ -210,9 +210,9 @@ public class HtmlContextMenu {
 	 */
 	public JPopupMenu popupMenuAbstractUI() {
 
-		JPopupMenu popupMenu = new JPopupMenu();
+		final JPopupMenu popupMenu = new JPopupMenu();
 
-		JMenuItem menuBack = new JMenuItem("Back");
+		final JMenuItem menuBack = new JMenuItem("Back");
 		menuBack.setIcon(IconFactory.getInstance().getIcon(BACK));
 		menuBack.addActionListener(e -> context.back());
 
@@ -220,12 +220,12 @@ public class HtmlContextMenu {
 
 		popupMenu.add(menuBack);
 
-		JMenuItem menuReload = new JMenuItem("Reload");
+		final JMenuItem menuReload = new JMenuItem("Reload");
 		menuReload.setIcon(IconFactory.getInstance().getIcon(RELOD));
 		menuReload.addActionListener(e -> context.reload());
 		popupMenu.add(menuReload);
 
-		JMenuItem menuForward = new JMenuItem("Forward");
+		final JMenuItem menuForward = new JMenuItem("Forward");
 		menuForward.setIcon(IconFactory.getInstance().getIcon(FORWARD));
 		menuForward.addActionListener(e -> context.forward());
 
