@@ -10,6 +10,7 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.Reader;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Map;
 
 /** Collection of utilities */
@@ -43,11 +44,13 @@ public class Kit {
 
     static Object newInstanceOrNull(Class<?> cl) {
         try {
-            return cl.newInstance();
-        } catch (SecurityException x) {
-        } catch (LinkageError ex) {
-        } catch (InstantiationException x) {
-        } catch (IllegalAccessException x) {
+            return cl.getDeclaredConstructor().newInstance();
+        } catch (SecurityException
+                | LinkageError
+                | InstantiationException
+                | IllegalAccessException
+                | NoSuchMethodException
+                | InvocationTargetException x) {
         }
         return null;
     }
@@ -68,7 +71,7 @@ public class Kit {
 
     /**
      * If character <code>c</code> is a hexadecimal digit, return <code>accumulator</code> * 16 plus
-     * corresponding number. Otherise return -1.
+     * corresponding number. Otherwise return -1.
      */
     public static int xDigitToInt(int c, int accumulator) {
         check:
